# pytorch-image-models

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  UPGRADING.md  a100env.yml  a100env2.yml  avg_checkpoints.py  benchmark.py  blseresnext-test.ipynb  bulk_runner.py  clean_checkpoint.py  dataset.py  distributed_train.sh  distributed_train_adabelief.sh  eval.py  export.py  full_modellist.txt  hacenv.yml  hacenv2.yml  hacenv3.yml  hubconf.py  index.html  inference.py  launch_xla.py  legacy_distributed_train.sh  legacy_train.py  mkdocs.yml  model-index.yml  moreh-parallel-run.sh  moreh-upload-log-S3.py  onnx_export.py  onnx_validate.py  out_log  post_quantization_validate.py  (+22 more)
.github/: FUNDING.yml
archived_changes/: index.html
changes/: index.html
configs/: eval.yaml  inference.yaml  train.yaml  validate.yaml
convert/: convert_from_mxnet.py  convert_gemma4_vit.py  convert_nest_flax.py
data/: __init__.py  config.py  constants.py  dataset.py  distributed_sampler.py  loader.py  random_erasing.py  tf_preprocessing.py  train.csv  transforms.py  utils.py
docs/: archived_changes.md  changes.md  feature_extraction.md  index.md  models.md  results.md  scripts.md  training_hparam_examples.md  training_hparams_and_examples.md
feature_extraction/: index.html
hfdocs/: README.md
javascripts/: tables.js
loss/: __init__.py  cross_entropy.py
modelindex/: generate_readmes.py  model-index.yml
models/: __init__.py  adaptive_avgmax_pool.py  conv2d_same.py  densenet.py  dpn.py  fbresnet200.py  gen_efficientnet.py  genmobilenet.py  gluon_resnet.py  helpers.py  inception_resnet_v2.py  inception_v3.py  inception_v4.py  index.html  median_pool.py  mnasnet.py  model_factory.py  my_densenet.py  my_resnet.py  pnasnet.py  random_erasing.py  resnet.py  resnext.py  senet.py  test_time_pool.py  transforms.py  wrn50_2.py  xception.py
notebook/: EffResNetComparison.ipynb
notebooks/: EffResNetComparison.ipynb
optim/: __init__.py  adabound.py  nadam.py  optim_factory.py  rmsprop_tf.py
results/: README.md  benchmark-infer-amp-nchw-pt110-cu113-rtx3090.csv  benchmark-infer-amp-nchw-pt111-cu113-rtx3090.csv  generate_csv_results.py  (+48 more)
(+1004 files in other folders)
